# surreal-basics

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  benchmark_library.py  pyproject.toml
.github/workflows/: create-tag.yml  publish.yml
docs/: README.md  api-reference.md  configuration.md  migrations.md
surreal_basics/: __init__.py  config.py  connection.py  exceptions.py  repo.py  repo_sync.py  retry.py  utils.py
surreal_basics/migrate/: __init__.py  __main__.py  cli.py  discovery.py  models.py  runner.py  runner_async.py
tests/: __init__.py  conftest.py  test_config.py  test_connection.py  test_migrate_discovery.py  test_migrate_integration.py  test_repo.py  test_repo_sync.py  test_retry.py  test_utils.py
