[project]
name = "surreal-basics"
version = "0.2.0"
description = "Simple and transparent SurrealDB connection management for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Luis Novo", email = "lfnovo@gmail.com" },
]
keywords = ["surrealdb", "database", "async", "websocket", "orm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "surrealdb>=1.0.6",
    "tenacity>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/lfnovo/surreal-basics"
Repository = "https://github.com/lfnovo/surreal-basics"
Issues = "https://github.com/lfnovo/surreal-basics/issues"
Documentation = "https://github.com/lfnovo/surreal-basics/tree/main/docs"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
sbl-migrate = "surreal_basics.migrate.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["surreal_basics"]
